--- a/Lesson06/preston6.html
+++ b/Lesson06/preston6.html
@@ -33,13 +33,13 @@
 
     <nav>
         <ul class="headermenu">
-            <li><a class="hamburger " href="#">Menu</a></li>
+            <li><a class="hamburger" href="#">Menu</a></li>
             <li><a href="#">Home</a></li>
-            <li><a href="preston-4.html" class="active-page">Preston</a></li>
+            <li><a href="preston-6.html" class="active-page">Preston</a></li>
             <li><a href="#">Soda Springs</a></li>
             <li><a href="#"> Fish Haven</a></li>
             <li><a href="#">Storm Center</a></li>
-            <li><a href="#">Gallery</a></li>
+            <li><a href="gallery-7.html">Gallery</a></li>
         </ul>
     </nav>
     
