--- a/Lesson07/lazyload.html
+++ b/Lesson07/lazyload.html
@@ -29,6 +29,6 @@
         <img src="images/placeholder.jpg" data-src="images/6.jpg" alt="picture 6" class="js-lazy-load">
     </picture>
     </div>
-    <script src="./js/lazy.js"></script>
+    <script src="./js/lazy.js" defer></script>
 </body>
 </html>
