--- a/Lesson07/Gallery-7.html
+++ b/Lesson07/Gallery-7.html
@@ -28,7 +28,7 @@
         <ul class="headermenu">
             <li><a class="hamburger " href="#">Menu</a></li>
             <li><a href="#">Home</a></li>
-            <li><a href="../Lesson06/preston-6.html">Preston</a></li>
+            <li><a href="../Lesson06/preston6.html">Preston</a></li>
             <li><a href="#">Soda Springs</a></li>
             <li><a href="#"> Fish Haven</a></li>
             <li><a href="#">Storm Center</a></li>
@@ -103,7 +103,7 @@
             <figcaption>Under the Tuscan Sun</figcaption>
         </figure>
         </div>
-        <script src="./js/lazy.js"></script>
+        <script src="./js/lazy.js" defer></script>
     </main>
 
     </body>
