--- a/Lesson07/Gallery-7.html
+++ b/Lesson07/Gallery-7.html
@@ -39,63 +39,63 @@
     <main>
         <h1>Weather Gallery</h1>
         <div class="gallery">
-            <figure class="pic1">
+            <figure class="pic1 pics">
             <img src="images/placeholder.jpg" data-src="./images/optimized/narrow/Delaware-600.jpg " alt="Deleware Water Gap" class="js-lazy-load" 
                     srcset="images/optimized/narrow/delaware-water-gap-200.jpg 200w, 
                             images/optimized/narrow/delaware-water-gap-400.jpg 400w, 
                             images/optimized/narrow/Delaware-600.jpg 600w">
             <figcaption>Delaware Shore</figcaption>
             </figure>
-        <figure class="pic2">
+        <figure class="pic2 pics">
             <img src="images/placeholder.jpg" data-src="images/clouds-1500.jpg" alt="Clouds" class="js-lazy-load"
                     srcset="images/optimized/narrow/clouds-600.jpg 600w,
                             images/optimized/narrow/clouds-1100.jpg 1100w,
                             images/optimized/narrow/clouds-1500.jpg 1500w">
             <figcaption>Cloudy with a chance of Meatballs</figcaption>
         </figure>
-        <figure class="pic3">
+        <figure class="pic3 pics">
             <img src="images/placeholder.jpg" data-src="images/hurricaine-1500.jpg" alt="Hurricaine" class="js-lazy-load"
             srcset="images/optimized/narrow/hurricaine-600.jpg 600w,
                     images/optimized/narrow/hurricaine-1100.jpg 1100w,
                     images/optimized/narrow/hurricaine-1500.jpg 1500w">
     <figcaption>Into the Storm</figcaption>
         </figure>
-        <figure class="pic4">
+        <figure class="pic4 pics">
             <img src="images/placeholder.jpg" data-src="images/field-1500.jpg" alt="Field" class="js-lazy-load"
             srcset="images/optimized/medium/field-600.jpg 600w,
                     images/optimized/medium/field-1100.jpg 1100w,
                     images/optimized/medium/field-1500.jpg 1500w">
             <figcaption>Field of Dreams</figcaption>
         </figure>
-        <figure class="pic5">
+        <figure class="pic5 pics">
             <img src="images/placeholder.jpg" data-src="images/flood-1100.jpg" alt="Flood" class="js-lazy-load"
             srcset="images/optimized/medium/flood-600.jpg 600w,
                     images/optimized/medium/flood-1100.jpg 1100w,
                     images/optimized/medium/flood-1500.jpg 1500w">
             <figcaption>The Day After Tomorrow</figcaption>
         </figure>
-        <figure class="pic6">
+        <figure class="pic6 pics">
             <img src="images/placeholder.jpg" data-src="images/shelf-cloud-1500.jpg" alt="Shelf Cloud" class="js-lazy-load"
             srcset="images/optimized/medium/shelf-cloud-600.jpg 600w,
                     images/optimized/medium/shelf-cloud-1100.jpg 1100w,
                     images/optimized/medium/shelf-cloud-1500.jpg 1500w">
             <figcaption>Twister</figcaption>
         </figure>
-        <figure class="pic7">
+        <figure class="pic7 pics">
             <img src="images/placeholder.jpg" data-src="images/lightening-1500.jpg" alt="Lightening" class="js-lazy-load"
             srcset="images/optimized/tall/lightening-600.jpg 600w,
                     images/optimized/tall/lightening-1100.jpg 1100w,
                     images/optimized/tall/lightening-1500.jpg 1500w">
             <figcaption>Percy Jackson and the Olympians: Lightening Thief</figcaption>
         </figure>
-        <figure class="pic8">
+        <figure class="pic8 pics">
             <img src="images/placeholder.jpg" data-src="images/rainbow-weather-1500.jpg" alt="Rainbow" class="js-lazy-load"
             srcset="images/optimized/tall/rainbow-weather-600.jpg 600w,
                     images/optimized/tall/rainbow-weather-1100.jpg 1100w,
                     images/optimized/tall/rainbow-weather-1500.jpg 1500w">
             <figcaption>Somewhere Over the Rainbow</figcaption>
         </figure>
-        <figure class="pic9">
+        <figure class="pic9 pics">
             <img src="images/placeholder.jpg" data-src="images/sun-1500.jpg" alt="Sun" class="js-lazy-load"
             srcset="images/optimized/tall/sun-600.jpg 600w,
                     images/optimized/tall/sun-1100.jpg 1100w,
