--- a/Lesson07/Gallery-7.html
+++ b/Lesson07/Gallery-7.html
@@ -12,11 +12,10 @@
     <link rel="stylesheet" href="../Lesson06/css/preston6Medium.css">
     <link rel="stylesheet" href="../Lesson06/css/preston6Large.css">
     <script src="../Lesson06/js/year.js"></script>
-    <script src="./js/gallery-7.js"></script>
 </head>
 <body onload="getDate()">
 
-    <header style="background-image: url(../Lesson06/images/header-big.jpg)" alt="weather background" class="background-image">
+    <header style="background-image: url(../Lesson06/images/header-big.jpg)" class="background-image">
 
         <img src="../Lesson06/images/logo-png.png" alt="Watercolor sun and snowflake combined" class="logoImage">
         <H1 class="headerH1">Worldwide Weather Today</H1>
@@ -80,17 +79,14 @@
         </figure>
         </div>
         <script src="./js/Lewis.js" defer></script>
-    </main>
-
-    </body>
+    </main>    
     <footer>
         <div class="footer-content">
             © <span id="NewYear"></span> | Wendy Strickland | Utah | <a href="https://www.byui.edu/online" target="_blank" class="BYUI2">BYUI Online Learning</a><br>
             Current Date: <span id="currentdate"></span><br>
         </div>
     </footer>
-    <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js">
-    </script>
+    <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
     <script src="js/webfont.js"></script>
-    </script>
+    </body>
     </html>
