--- a/Lesson07/Gallery-7.html
+++ b/Lesson07/Gallery-7.html
@@ -8,9 +8,9 @@
     <meta name="description" content="Preston, ID | News | Weather | More! ">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="../Lesson06/css/normalize.css">
-    <link rel="stylesheet" href="../Lesson06/css/preston6.css">
-    <link rel="stylesheet" href="../Lesson06/css/preston6Medium.css">
-    <link rel="stylesheet" href="../Lesson06/css/preston6Large.css">
+    <link rel="stylesheet" href="css/gallery-7.css">
+    <link rel="stylesheet" href="css/preston7Medium.css">
+    <link rel="stylesheet" href="css/preston7Large.css">
     <script src="../Lesson06/js/year.js"></script>
 </head>
 <body onload="getDate()">
