--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <li>Lesson 05: <a href="Lesson05/bom.html" class="BYUI">Top 25 Scriptures</a>   |   <a href="Lesson05/preston5.html" class="BYUI">Preston Page</a></li>
             <li>Lesson 06: <a href="Lesson06/preston6.html" class="BYUI">Preston Page</a></li>
             <li>Lesson 07: <a href="Lesson07/lazyload.html" class="BYUI">Lazy Load Activity | <a href="Lesson07/Gallery-7.html" class="BYUI">Gallery</a></li>
-            <li>Lesson 08: <a href="Lesson08" class="BYUI">Week 8</a></li>
+            <li>Lesson 08: <a href="Lesson08/tablebuild.html" class="BYUI">Table</a></li>
             <li>Lesson 09: <a href="Lesson09" class="BYUI">Week 9</a></li>
             <li>Lesson 10: <a href="Lesson10" class="BYUI">Week 10</a></li>
             <li>Lesson 11: <a href="Lesson11" class="BYUI">Week 11</a></li>
