--- a/Lesson08/tablebuild.html
+++ b/Lesson08/tablebuild.html
@@ -54,7 +54,7 @@
         </tbody>
         <tfoot class="foot">
             <tr>
-                <td colspan="3" class="foot">Complied 12.20.2020 by wStrickland</td>
+                <td colspan="3" class="foot">Compiled 06.07.2021 by wStrickland</td>
             </tr>
         </tfoot>
         
