--- a/Lesson06/preston6.html
+++ b/Lesson06/preston6.html
@@ -38,7 +38,7 @@
             <li><a href="preston-6.html" class="active-page">Preston</a></li>
             <li><a href="#">Soda Springs</a></li>
             <li><a href="#"> Fish Haven</a></li>
-            <li><a href="#">Storm Center</a></li>
+            <li><a href="../Lesson08/stormcenter.html">Storm Center</a></li>
             <li><a href="../lesson07/gallery-7.html">Gallery</a></li>
         </ul>
     </nav>
