--- a/Lesson08/tablebuild.html
+++ b/Lesson08/tablebuild.html
@@ -13,12 +13,14 @@
     <table id="sales">
         <thead>
             <tr>
-                <th colspan="3" class="h1">ACME Wildwest</th>
+                <th colspan="3">ACME Wildwest</th>
             </tr>
             <tr>
-                <th class="blue2">Period</th>
-                <th class="blue2">Sales</th>
-                <th class="blue2">Sales Goal</th>
+                <span>
+                <th>Period</th>
+                <th>Sales</th>
+                <th>Sales Goal</th>
+                </span>
             </tr>
         </thead>
         <tbody>
@@ -40,7 +42,7 @@
             <tr>
                 <td>November</td>
                 <td>$8,610</td>
-                <td class="blue">$7,500</td>
+                <td>$7,500</td>
             </tr>
             <tr>
                 <td><i>Black Friday</i></td>
@@ -52,9 +54,9 @@
                 <td>$7,500</td>
             </tr>
         </tbody>
-        <tfoot class="foot">
+        <tfoot>
             <tr>
-                <td colspan="3" class="foot">Compiled 06.07.2021 by wStrickland</td>
+                <td colspan="3">Compiled 06.07.2021 by wStrickland</td>
             </tr>
         </tfoot>
         
