--- a/Lesson07/Gallery-7.html
+++ b/Lesson07/Gallery-7.html
@@ -30,7 +30,7 @@
             <li><a href="../Lesson06/preston6.html">Preston</a></li>
             <li><a href="#">Soda Springs</a></li>
             <li><a href="#"> Fish Haven</a></li>
-            <li><a href="#">Storm Center</a></li>
+            <li><a href="../Lesson08/stormcenter.html">Storm Center</a></li>
             <li><a href="gallery-7.html" class="active-page">Gallery</a></li>
         </ul>
     </nav>
