--- a/Lesson08/stormcenter.html
+++ b/Lesson08/stormcenter.html
@@ -4,14 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WorldWide Weather Today</title>
-    <meta name="description" content="Preston, ID | News | Weather | More! ">
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <title>Storm Center</title>
+    <meta name="description" content="Storm Center  |  Worldwide Weather Today  ">
+    <link rel="shortcut icon" href="../favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="../Lesson06/css/normalize.css">
     <link rel="stylesheet" href="css/week8.css">
     <link rel="stylesheet" href="css/week8Medium.css">
     <link rel="stylesheet" href="css/week8Large.css">
     <script src="../Lesson06/js/year.js"></script>
+    <script src="js/storm.js"></script>
 </head>
 <body onload="getDate()">
 
@@ -30,49 +31,85 @@
             <li><a href="../Lesson06/preston6.html">Preston</a></li>
             <li><a href="#">Soda Springs</a></li>
             <li><a href="#"> Fish Haven</a></li>
-            <li><a href="../Lesson08/stormcenter.html">Storm Center</a></li>
-            <li><a href="gallery-7.html" class="active-page">Gallery</a></li>
+            <li><a href="../Lesson08/stormcenter.html" class="active-page">Storm Center</a></li>
+            <li><a href="../Lesson07/Gallery-7.html">Gallery</a></li>
         </ul>
     </nav>
-
-    <form>
-        <label for="fullName">Full Name<br>
-        <input id="fullName" type="text" minlength="5" name="full_name" accept="alpha" required></label><br>
-        <label for="email">Email</label><br>
-        <input id="email" type="email" name="email_addy" placeholder="someone@somewhere.com"><br>
-        <label for="phone">Phone Number</label><br>
-        <input id="phone" type="number" name="phone_number" required><br>
-        <label for="zip">Zip Code</label><br>
-        <input id="zip" type="number" name="zipCode" required><br>
+    <main>
+    <form action="thanks.html">
+        <div class="grid">
+            <div class="form contact">
+                    <label for="fullName">Full Name <br>
+                        <input id="fullName" type="text" minlength="5" name="full_name" pattern="[A-Z a-z]+" required></label><br>
+                    <label for="email">Email<br>
+                        <input id="email" type="email" name="email_addy" placeholder="someone@something.com"></label><br>
+                    <label for="phone">Phone Number<br>
+                        <input id="phone" type="tel" name="phone_number" maxlength="10" required></label><br>
+                    <label for="zip">Zip Code<br>
+                    <input id="zip" type="number" name="zipCode" required></label><br>
+                    <br>
+            </div>
+                <br>
+            <div class="form storm">
+                    <label for="stormDate">Storm date<br>
+                        <input id="stormDate" type="date" name="storm_date" required></label><br>
+                    <label for="stormType">Storm Type<br>
+                        <input id="stormType" list="storm-type" name="storm_type">
+                            <datalist id="storm-type">
+                                <option value="Flash Flood">
+                                <option value="Hail">
+                                <option value="Hurricane">
+                                <option value="Thunderstorm">
+                                <option value="Tornado">
+                            </datalist></label><br>
+                    <label for="stormSeverity">Storm Severity<br>
+                        <input id="stormSeverity" type="range"
+                                value="5" min="1" max="10" step="1" 
+                                list="tickmarks" oninput="adjustRating(this.value)" onchange="adjustRating(this.value)">
+                        <span id="ratingvalue">5</span></label>
+                            <datalist id="severity">
+                                <option value="1">
+                                <option value="2">
+                                <option value="3">
+                                <option value="4">
+                                <option value="5">
+                                <option value="6">
+                                <option value="7">
+                                <option value="8">
+                                <option value="9">
+                                <option value="10">
+                            </datalist><br>
+                    <label for="stormRegion">Storm Region<br>
+                        <select name="regions" id="regionSelect" onchange="selectResponses()">
+                                <option value="" disabled selected>Select Region</option>
+                                <option value="preston">Preston</option>
+                                <option value="soda_springs">Soda Springs</option>
+                                <option value="fish_haven">Fish Haven</option>
+                        </select>
+                    </label><br><br>
+                    <label for="userDanger">User in Danger<br>
+                        <div class="radioSelector">
+                        <input type="radio" id="danger" name="user_danger" value="yes" checked>
+                    <label for="danger">yes   </label>
+                        <input type="radio" id="danger" name="user_danger" value="maybe">
+                    <label for="danger">maybe   </label>
+                        <input type="radio" id="danger" name="user_danger" value="no">
+                    <label for="danger">no</label>
+                    </label>
+                        </div><br>
+                    <label for="additionalInfo">Additional information or Comments<br>
+                        <input type="textarea"></label><br> 
+            </div>
+        </div>
         <br>
-        <label for="stormDate">Storm Date</label><br>
-        <input id="stormDate" type="date" name="storm_date" required><br>
-        <label for="stormType">Storm Type<br>
-        <input id="stormType" list="storm-type" name="storm_type">
-        <datalist id="storm-type">
-                <option value="Flash Flood">
-                <option value="Hail">
-                <option value="Hurricane">
-                <option value="Thunderstorm">
-                <option value="Tornado">
-        </datalist></label><br>
-        <label for="stormSeverity">Storm Severity<br>
-        <input id="stormSeverity" type="range" id="severity" 
-                value="5" min="1" max="10" step="1" 
-                list="tickmarks" oninput="adjustRating(this.value)"" onchange="adjustRating(this.value)">
-                <datalist id="severity">
-                    <option value="1">
-                    <option value="2">
-                    <option value="3">
-                    <option value="4">
-                    <option value="5">
-                    <option value="6">
-                    <option value="7">
-                    <option value="8">
-                    <option value="9">
-                    <option value="10">
-                </datalist></label><br>
-        <button>Submit</button>
+        <div class="button">
+
+        <a href="thanks.html">
+        <input type="submit" id="submit" value="Submit"/>
+        </a>
+        </div>
     </form>
+    </main>
+
     </body>
     </html>
