--- a/Lesson08/stormcenter.html
+++ b/Lesson08/stormcenter.html
@@ -9,8 +9,8 @@
     <link rel="shortcut icon" href="../favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="../Lesson06/css/normalize.css">
     <link rel="stylesheet" href="css/week8.css">
-    <link rel="stylesheet" href="css/week8Medium.css">
-    <link rel="stylesheet" href="css/week8Large.css">
+    <link rel="stylesheet" href="css/week8medium.css">
+    <link rel="stylesheet" href="css/week8large.css">
     <script src="../Lesson06/js/year.js"></script>
     <script src="js/storm.js"></script>
 </head>
