--- a/Lesson08/stormcenter.html
+++ b/Lesson08/stormcenter.html
@@ -110,6 +110,11 @@
         </div>
     </form>
     </main>
-
+    <footer>
+        <div class="footer-content">
+            © <span id="NewYear"></span> | Wendy Strickland | Utah | <a href="https://www.byui.edu/online" target="_blank" class="BYUI2">BYUI Online Learning</a><br>
+            Current Date: <span id="currentdate"></span><br>
+        </div>
+    </footer>
     </body>
     </html>
