--- a/Lesson08/tablebuild.html
+++ b/Lesson08/tablebuild.html
@@ -16,11 +16,9 @@
                 <th colspan="3">ACME Wildwest</th>
             </tr>
             <tr>
-                <span>
                 <th>Period</th>
                 <th>Sales</th>
                 <th>Sales Goal</th>
-                </span>
             </tr>
         </thead>
         <tbody>
@@ -45,7 +43,7 @@
                 <td>$7,500</td>
             </tr>
             <tr>
-                <td><i>Black Friday</i></td>
+                <td>Black Friday</td>
                 <td colspan="2">$3,200</td>
             </tr>
             <tr>
