--- a/Lesson07/gallery7.html
+++ b/Lesson07/gallery7.html
@@ -4,17 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WorldWide Weather Today</title>
-    <meta name="description" content="Preston, ID | News | Weather | More! ">
+    <title>Gallery</title>
+    <meta name="description" content="Gallery of weather Images | Worldwide Weather Today">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="../Lesson06/css/normalize.css">
-    <link rel="stylesheet" href="css/gallery-7.css">
-    <link rel="stylesheet" href="css/preston7Medium.css">
-    <link rel="stylesheet" href="css/preston7Large.css">
-    <script src="../Lesson06/js/year.js"></script>
+    <link rel="stylesheet" href="css/gallery7.css">
+    <link rel="stylesheet" href="css/preston7medium.css">
+    <link rel="stylesheet" href="css/preston7large.css">
+    <script src="../lesson06/js/year.js"></script>
 </head>
 <body onload="getDate()">
-
     <header style="background-image: url(../Lesson06/images/header-big.jpg)" class="background-image">
 
         <img src="../Lesson06/images/logo-png.png" alt="Watercolor sun and snowflake combined" class="logoImage">
@@ -22,7 +21,7 @@
         <hr class="headerHR">
         <p class="headerP"><strong>Whether you are traveling around the block or around the world, <br>get the info you need before you go!</strong></p>
     </header>
-
+    <div class="visit"><span id="lastvisit"></span> days since last visit.</div>
     <nav>
         <ul class="headermenu">
             <li><a class="hamburger " href="#">Menu</a></li>
