--- a/Lesson07/gallery7.html
+++ b/Lesson07/gallery7.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="css/preston7medium.css">
     <link rel="stylesheet" href="css/preston7large.css">
     <script src="../lesson06/js/year.js"></script>
+    <script src="js/days.js"></script>
 </head>
 <body onload="getDate()">
     <header style="background-image: url(../Lesson06/images/header-big.jpg)" class="background-image">
