--- a/Lesson09/prophets.html
+++ b/Lesson09/prophets.html
@@ -18,6 +18,6 @@
         <footer>
             Wendy Strickland | Utah | <a href="https://www.byui.edu/online" target="_blank" class="BYUI2">BYUI Online Learning</a><br>
         </footer>
-        <script src="prophets.js"></script>
+        <script src='js/prophets.js'></script>
 </body>
 </html>
