--- a/Lesson09/prophets.html
+++ b/Lesson09/prophets.html
@@ -16,7 +16,7 @@
             <div class="cards"></div>
         </main>
         <footer>
-            Wendy Strickland | Utah | <a href="https://www.byui.edu/online" target="_blank" class="BYUI2">BYUI Online Learning</a><br>
+            Wendy Strickland | BYU-Idaho | WDD 230
         </footer>
         <script src='js/prophets.js'></script>
 </body>
