--- a/Lesson08/stormcenter.html
+++ b/Lesson08/stormcenter.html
@@ -27,7 +27,7 @@
     <nav>
         <ul class="headermenu">
             <li><a class="hamburger " href="#">Menu</a></li>
-            <li><a href="#">Home</a></li>
+            <li><a href="../Lesson09/index.html">Home</a></li>
             <li><a href="../Lesson06/preston6.html">Preston</a></li>
             <li><a href="#">Soda Springs</a></li>
             <li><a href="#"> Fish Haven</a></li>
