--- a/Lesson09/index.html
+++ b/Lesson09/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Your one stop for weather, news, and information about south eastern Idaho | Worldwide Weather Today">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="../Lesson06/css/normalize.css">
-    <link rel="stylesheet" href="css/small.css">
+    <link rel="stylesheet" href="css/home.css">
     <link rel="stylesheet" href="css/medium.css">
     <link rel="stylesheet" href="css/large.css">
     <script src="../lesson06/js/year.js"></script>
@@ -33,7 +33,7 @@
         </ul>
     </nav>
     
-    <main class="maingrid">
+    <main>
         <picture>
             <img src="images/hero.jpg" alt="Idaho Sunset" class="hero"
                 srcset="images/hero400.jpg 400w,
@@ -50,24 +50,18 @@
         <article class="sodabox">
             <div class="soda data"></div>
             <picture>
-                <img src="images/soda500.jpg" alt="An Old House in Preston, Id" class="sodaphoto townphotos"
-                    srcset="images/soda300.jpg 300w,
-                            images/soda500.jpg 500w">
+                <img src="images/soda500.jpg" alt="An Old House in Preston, Id" class="sodaphoto townphotos">
             </picture>
         </article>
             
         <article class="fishbox">
             <div class="fish data"></div>
-            <img src="images/fish500.jpg" alt="View of a lake in Idaho" class="fishphoto townphotos"
-                srcset="images/fish300.jpg 300w,
-                        images/fish500.jpg 500w">
+            <img src="images/fish500.jpg" alt="View of a lake in Idaho" class="fishphoto townphotos">
         </article>
 
         <article class="prestonbox">
             <div class="preston data"></div>
-            <img src="images/preston500.jpg" alt="An Old House in Preston, Id" class="prestonphoto townphotos"
-                srcset="images/preston300.jpg 300w,
-                        images/preston500.jpg 500w">
+            <img src="images/preston500.jpg" alt="An Old House in Preston, Id" class="prestonphoto townphotos">
         </article>
         </section>
     </main>    
