--- a/Lesson09/index.html
+++ b/Lesson09/index.html
@@ -46,20 +46,18 @@
             <li>Preston was the site of the 1863 Bear River Massacre.  A monument was erected there to commemorate the event.</li><br>
             <li>Fish Haven was originally named Rush Creek but the name was changed because of the proximity to Bear Lake and the abundent fishing there.</li>
         </ul>
-        <section>
-        <article class="sodabox">
+        <section class="soap-box">
+        <article class="sodabox boxes">
             <div class="soda data"></div>
-            <picture>
-                <img src="images/soda500.jpg" alt="An Old House in Preston, Id" class="sodaphoto townphotos">
-            </picture>
+            <img src="images/soda500.jpg" alt="An Old House in Preston, Id" class="sodaphoto townphotos">
         </article>
             
-        <article class="fishbox">
+        <article class="fishbox boxes">
             <div class="fish data"></div>
             <img src="images/fish500.jpg" alt="View of a lake in Idaho" class="fishphoto townphotos">
         </article>
 
-        <article class="prestonbox">
+        <article class="prestonbox boxes">
             <div class="preston data"></div>
             <img src="images/preston500.jpg" alt="An Old House in Preston, Id" class="prestonphoto townphotos">
         </article>
