--- a/Lesson08/stormcenter.html
+++ b/Lesson08/stormcenter.html
@@ -28,17 +28,17 @@
         <ul class="headermenu">
             <li><a class="hamburger " href="#">Menu</a></li>
             <li><a href="../Lesson09/index.html">Home</a></li>
-            <li><a href="../Lesson06/preston6.html">Preston</a></li>
+            <li><a href="../Lesson10/Preston10.html">Preston</a></li>
             <li><a href="#">Soda Springs</a></li>
             <li><a href="#"> Fish Haven</a></li>
             <li><a href="../Lesson08/stormcenter.html" class="active-page">Storm Center</a></li>
-            <li><a href="../Lesson07/Gallery-7.html">Gallery</a></li>
+            <li><a href="../Lesson07/Gallery7.html">Gallery</a></li>
         </ul>
     </nav>
     <main>
     <form action="thanks.html">
         <div class="grid">
-            <div class="form contact">
+            <div class="form contact-storm">
                     <label for="fullName">Full Name <br>
                         <input id="fullName" type="text" minlength="5" name="full_name" pattern="[A-Z a-z]+" required></label><br>
                     <label for="email">Email<br>
