--- a/Lesson07/gallery7.html
+++ b/Lesson07/gallery7.html
@@ -26,12 +26,12 @@
     <nav>
         <ul class="headermenu">
             <li><a class="hamburger " href="#">Menu</a></li>
-            <li><a href="#">Home</a></li>
-            <li><a href="../Lesson06/preston6.html">Preston</a></li>
+            <li><a href="../Lesson09/index.html">Home</a></li>
+            <li><a href="../Lesson10/Preston10.html">Preston</a></li>
             <li><a href="#">Soda Springs</a></li>
             <li><a href="#"> Fish Haven</a></li>
             <li><a href="../Lesson08/stormcenter.html">Storm Center</a></li>
-            <li><a href="gallery-7.html" class="active-page">Gallery</a></li>
+            <li><a href="gallery7.html" class="active-page">Gallery</a></li>
         </ul>
     </nav>
     
