--- a/Lesson09/index.html
+++ b/Lesson09/index.html
@@ -24,12 +24,12 @@
     <nav>
         <ul class="headermenu">
             <li><a class="hamburger " href="#">Menu</a></li>
-            <li><a href="index.html"  class="active-page">Home</a></li>
-            <li><a href="../Lesson06/preston6.html">Preston</a></li>
+            <li><a href="../Lesson09/index.html"  class="active-page">Home</a></li>
+            <li><a href="../Lesson10/Preston10.html">Preston</a></li>
             <li><a href="#">Soda Springs</a></li>
             <li><a href="#"> Fish Haven</a></li>
             <li><a href="../Lesson08/stormcenter.html">Storm Center</a></li>
-            <li><a href=".../Lesson07/gallery-7.html">Gallery</a></li>
+            <li><a href="../Lesson07/gallery7.html">Gallery</a></li>
         </ul>
     </nav>
     
