--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <li>Lesson 07: <a href="Lesson07/lazyload.html" class="BYUI">Lazy Load Activity | <a href="Lesson07/gallery7.html" class="BYUI">Gallery</a></li>
             <li>Lesson 08: <a href="Lesson08/tablebuild.html" class="BYUI">Table  |  </a><a href="Lesson08/stormcenter.html" class="BYUI">Storm Center</a> </li>
             <li>Lesson 09: <a href="Lesson09/prophets.html" class="BYUI">Prophets  |  </a><a href="Lesson09/wireframes.html" class="BYUI">Wireframes  |  </a><a href="Lesson09/index.html">Home Page</a></li>
-            <li>Lesson 10: <a href="Lesson10" class="BYUI">Week 10</a></li>
+            <li>Lesson 10: <a href="Lesson10/Preston10.html" class="BYUI">Back to Preston</a></li>
             <li>Lesson 11: <a href="Lesson11" class="BYUI">Week 11</a></li>
         </ul>
         </div>
