--- a/Lesson09/index.html
+++ b/Lesson09/index.html
@@ -35,15 +35,15 @@
     
     <main>
         <picture>
-            <img src="images/hero.jpg" alt="Idaho Sunset" class="hero"
+            <img src="images/hero.jpg" alt="Idaho Sunset" class="hero" 
                 srcset="images/hero400.jpg 400w,
                         images/hero800.jpg 800w, 
                         images/hero1500.jpg 1500w">
         </picture>
         <H2 class="way2go">Things to know about Idaho</H2>
         <ul class="huh">
-            <li>Soda Springs in home to the world's only captive geyser.  It was discovered 80 years ago while drilling for a swimming pool.</li><br>
-            <li>Preston was the site of the 1863 Bear River Massacre.  A monument was erected there to commemorate the event.</li><br>
+            <li>Soda Springs in home to the world's only captive geyser.  It was discovered 80 years ago while drilling for a swimming pool.</li>
+            <li>Preston was the site of the 1863 Bear River Massacre.  A monument was erected there to commemorate the event.</li>
             <li>Fish Haven was originally named Rush Creek but the name was changed because of the proximity to Bear Lake and the abundent fishing there.</li>
         </ul>
         <section class="soap-box">
