--- a/Lesson10/Preston10.html
+++ b/Lesson10/Preston10.html
@@ -14,6 +14,7 @@
     <script src="./js/year.js"></script>
     <script src="./js/preston6.js"></script>
     <script defer src="js/forecast-api.js"></script>
+    <script src="./js/pancake.js"></script>
 </head>
 <div class="pancake hide">
     Saturday = Preston Pancakes in the Park!  9:00 a.m. Saturday at the city park pavilion.
@@ -76,26 +77,31 @@
         <div>
                         <div class="r1">
                             <strong>5 Day Forecast</strong></div>         
-                        <div class="cards">
+                        <div class="fivedaydrop">
                         <div>
                             <div id="dayofWeek1" class="forday"></div>
-                            <div id= 'forecast1'></div>
+                            <div>Hi <span id= 'forecast1' class="forecastnumber"></span>&#176; F/Lo <span id='forecastlo1'></span>&#176; F</div>
+                            <div id= "foredesc1"></div>
                         </div>
                         <div>
                             <div id="dayofWeek2" class="forday"></div>
-                            <div id= 'forecast2'></div>
+                            <div>Hi <span id= 'forecast2' class="forecastnumber"></span>&#176; F/Lo <span id='forecastlo2'></span>&#176; F</div>
+                            <div id= "foredesc2"></div>
                         </div>
                         <div>
                             <div id="dayofWeek3" class="forday"></div>
-                            <div id= 'forecast3'></div>
+                            <div>Hi <span id= 'forecast3' class="forecastnumber"></span>&#176; F/Lo <span id='forecastlo3'></span>&#176; F</div>
+                            <div id = "foredesc3"></div>
                         </div>
                         <div>
                             <div id="dayofWeek4" class="forday"></div>
-                            <div id= 'forecast4'></div>
+                            <div>Hi <span id= 'forecast4' class="forecastnumber"></span>&#176; F/Lo <span id='forecastlo4'></span>&#176; F</div>
+                            <div id = "foredesc4"></div>
                         </div>
                         <div>
                             <div id="dayofWeek5" class="forday"></div>
-                            <div id= 'forecast5'></div>
+                            <div>Hi <span id= 'forecast5' class="forecastnumber"></span>&#176; F/Lo <span id='forecastlo5'></span>&#176; F</div>
+                            <div id = "foredesc5"></div>
                         </div>
                         </div>
         </div>
