--- a/Lesson10/Preston10.html
+++ b/Lesson10/Preston10.html
@@ -78,29 +78,34 @@
                         <div class="r1">
                             <strong>5 Day Forecast</strong></div>         
                         <div class="fivedaydrop">
-                        <div>
+                        <div class="box">
                             <div id="dayofWeek1" class="forday"></div>
-                            <div>Hi <span id= 'forecast1' class="forecastnumber"></span>&#176; F/Lo <span id='forecastlo1'></span>&#176; F</div>
+                            <div id="icon1"></div>
+                            <div class="hilo">Hi <span id= 'forecast1' class="forecastnumber"></span>&#176; F/Lo <span id='forecastlo1'></span>&#176; F</div>
                             <div id= "foredesc1"></div>
                         </div>
                         <div>
                             <div id="dayofWeek2" class="forday"></div>
-                            <div>Hi <span id= 'forecast2' class="forecastnumber"></span>&#176; F/Lo <span id='forecastlo2'></span>&#176; F</div>
+                            <div id="icon2"></div>
+                            <div class="hilo">Hi <span id= 'forecast2' class="forecastnumber"></span>&#176; F/Lo <span id='forecastlo2'></span>&#176; F</div>
                             <div id= "foredesc2"></div>
                         </div>
                         <div>
                             <div id="dayofWeek3" class="forday"></div>
-                            <div>Hi <span id= 'forecast3' class="forecastnumber"></span>&#176; F/Lo <span id='forecastlo3'></span>&#176; F</div>
+                            <div id="icon3"></div>
+                            <div class="hilo">Hi <span id= 'forecast3' class="forecastnumber"></span>&#176; F/Lo <span id='forecastlo3'></span>&#176; F</div>
                             <div id = "foredesc3"></div>
                         </div>
                         <div>
                             <div id="dayofWeek4" class="forday"></div>
-                            <div>Hi <span id= 'forecast4' class="forecastnumber"></span>&#176; F/Lo <span id='forecastlo4'></span>&#176; F</div>
+                            <div id="icon4"></div>
+                            <div class="hilo">Hi <span id= 'forecast4' class="forecastnumber"></span>&#176; F/Lo <span id='forecastlo4'></span>&#176; F</div>
                             <div id = "foredesc4"></div>
                         </div>
                         <div>
                             <div id="dayofWeek5" class="forday"></div>
-                            <div>Hi <span id= 'forecast5' class="forecastnumber"></span>&#176; F/Lo <span id='forecastlo5'></span>&#176; F</div>
+                            <div id="icon5"></div>
+                            <div class="hilo">Hi <span id= 'forecast5' class="forecastnumber"></span>&#176; F/Lo <span id='forecastlo5'></span>&#176; F</div>
                             <div id = "foredesc5"></div>
                         </div>
                         </div>
