--- a/Lesson10/Preston10.html
+++ b/Lesson10/Preston10.html
@@ -57,10 +57,10 @@
             <hr class="hero-hr">
                 <table class="weather-box">
                     <tr>
-                        <td class="left">CURRENTLY:    </td><td><span id="current-temp"></span></td>
+                        <td class="left">CURRENTLY:    </td><td class="right"><span id="current-temp"></span></td>
                     </tr>
                     <tr>
-                        <td class="left">HIGH:    </td><td><span class="right" id="high"></span>&#176; F</td>
+                        <td class="left">HIGH:    </td><td class="right"><span id="high"></span>&#176; F</td>
                     </tr>
                     <tr>
                         <td class="left">WIND CHILL:    </td><td class="right"><span id="windchill"></span>&#176; F</td>
