--- a/Lesson10/Preston10.html
+++ b/Lesson10/Preston10.html
@@ -139,7 +139,7 @@
             <div class="contact-info-preston">
                 <div class="contact-address-preston">
                     <img src="images/location-icon.png" alt="location contacticons" class="location"><span>1234 Fifth Ave<br>
-                    <span class="second-row-preston">Sixton, SV 89101</span>
+                    <div class="second-row-preston">Sixton, SV 89101</div>
                 </div>
                 <img src="images/email.png" class="contacticons emailicon" alt="email icon"><a href="mailto:info@prestontown.gov">info@prestontown.gov</a><br>
                 <img src="images/phone-icon.png" class="contacticons phoneicon" alt="phone icon"><a href="Tel: 123-456-7890">(123)456-7890</a>
