--- a/Lesson10/Preston10.html
+++ b/Lesson10/Preston10.html
@@ -19,13 +19,8 @@
 <div class="pancake hide">
     Saturday = Preston Pancakes in the Park!  9:00 a.m. Saturday at the city park pavilion.
 </div>
-<body onload="getDate()">
-
-    <header style="background-image: url(./images/header-big.jpg)" alt="weather background" class="background-image"
-            srcset="images/header-600.jpg 600w, 
-                    images/header-1100.jpg 1100w, 
-                    images/header-1600.jpg 1600w">
-
+<body>
+    <header style="background-image: url(./images/header-big.jpg)" class="background-image">
         <img src="images/logo-png.png" alt="Watercolor sun and snowflake combined" class="logoImage">
         <H1 class="headerH1">Worldwide Weather Today</H1>
         <hr class="headerHR">
@@ -138,11 +133,11 @@
             <h2 class="contact-title-preston">Contact Information</h2>
             <div class="contact-info-preston">
                 <div class="contact-address-preston">
-                    <img src="images/location-icon.png" alt="location contacticons" class="location"><span>1234 Fifth Ave<br>
+                    <img src="images/location-icon.png" alt="location contacticons" class="location"><span>1234 Fifth Ave</span><br>
                     <div class="second-row-preston">Sixton, SV 89101</div>
                 </div>
                 <img src="images/email.png" class="contacticons emailicon" alt="email icon"><a href="mailto:info@prestontown.gov">info@prestontown.gov</a><br>
-                <img src="images/phone-icon.png" class="contacticons phoneicon" alt="phone icon"><a href="Tel: 123-456-7890">(123)456-7890</a>
+                <img src="images/phone-icon.png" class="contacticons phoneicon" alt="phone icon"><a href="Tel:123-456-7890">(123)456-7890</a>
                 <div class="social-icons">
                     <a href="www.twitter.com"><img src="images/twitter.png" alt="twitter icon" class="social twitter"></a>
                     <a href="www.facebook.com"><img src="images/facebook.png" alt="facebook icon" class="social facebook"></a>
@@ -162,6 +157,5 @@
     <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js">
     </script>
     <script src="js/webfont.js"></script>
-    </script>
 </body>
 </html>
