--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <li>Lesson 08: <a href="Lesson08/tablebuild.html" class="BYUI">Table  |  </a><a href="Lesson08/stormcenter.html" class="BYUI">Storm Center</a> </li>
             <li>Lesson 09: <a href="Lesson09/prophets.html" class="BYUI">Prophets  |  </a><a href="Lesson09/wireframes.html" class="BYUI">Wireframes  |  </a><a href="Lesson09/index.html">Home Page</a></li>
             <li>Lesson 10: <a href="Lesson10/Preston10.html" class="BYUI">Back to Preston</a></li>
-            <li>Lesson 11: <a href="Lesson11" class="BYUI">Week 11</a></li>
+            <li>Lesson 11: <a href="Lesson11/index.html" class="BYUI">Come together, Right Now (aka - The Finale)</a></li>
         </ul>
         </div>
         </main>
