--- a/Lesson11/index.html
+++ b/Lesson11/index.html
@@ -28,7 +28,7 @@
             <li><a href="./preston.html">Preston</a></li>
             <li><a href="./soda.html">Soda Springs</a></li>
             <li><a href="./fishy.html"> Fish Haven</a></li>
-            <li><a href=".stormcenter.html">Storm Center</a></li>
+            <li><a href="stormcenter.html">Storm Center</a></li>
             <li><a href="./gallery.html">Gallery</a></li>
         </ul>
     </nav>
