--- a/Lesson11/preston.html
+++ b/Lesson11/preston.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Preston, ID</title>
     <meta name="description" content="Preston, ID | News | Weather | More! ">
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="./css/normalize.css">
     <link rel="stylesheet" href="./css/weathersite.css">
     <link rel="stylesheet" href="./css/medium.css">
