--- a/Lesson11/thanks.html
+++ b/Lesson11/thanks.html
@@ -5,17 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Thanks!</title>
-    <link rel="shortcut icon" href="../favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="../Lesson06/css/normalize.css">
-    <link rel="stylesheet" href="css/week8.css">
-    <link rel="stylesheet" href="css/week8Medium.css">
-    <link rel="stylesheet" href="css/week8Large.css">
-    <script src="../Lesson06/js/year.js"></script>
+    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="./css/normalize.css">
+    <link rel="stylesheet" href="css/weathersite.css">
+    <link rel="stylesheet" href="css/Medium.css">
+    <link rel="stylesheet" href="css/Large.css">
+    <script src="./js/year.js"></script>
 </head>
 <body onload="getDate()">
     <header style="background-image: url(../Lesson06/images/header-big.jpg)" class="background-image">
 
-        <img src="../Lesson06/images/logo-png.png" alt="Watercolor sun and snowflake combined" class="logoImage">
+        <img src="images/logo-png.png" alt="Watercolor sun and snowflake combined" class="logoImage">
         <H1 class="headerH1">Worldwide Weather Today</H1>
         <hr class="headerHR">
         <p class="headerP"><strong>Whether you are traveling around the block or around the world, <br>get the info you need before you go!</strong></p>
@@ -24,12 +24,12 @@
     <nav>
         <ul class="headermenu">
             <li><a class="hamburger " href="#">Menu</a></li>
-            <li><a href="#">Home</a></li>
-            <li><a href="../Lesson06/preston6.html">Preston</a></li>
-            <li><a href="#">Soda Springs</a></li>
-            <li><a href="#"> Fish Haven</a></li>
-            <li><a href="../Lesson08/stormcenter.html" class="active-page">Storm Center</a></li>
-            <li><a href="../Lesson07/Gallery-7.html">Gallery</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="preston.html">Preston</a></li>
+            <li><a href="soda.html">Soda Springs</a></li>
+            <li><a href="fishy.html"> Fish Haven</a></li>
+            <li><a href="stormcenter.html">Storm Center</a></li>
+            <li><a href="gallery.html">Gallery</a></li>
         </ul>
     </nav>
     <main>
